--- a/ProjectFrontEnd/FatimaAliyeva.css
+++ b/ProjectFrontEnd/FatimaAliyeva.css
@@ -40,6 +40,17 @@ body{
 }
 .navbar .logo a span{
     color: crimson;
+
+}
+.navbar .sticky .menu li a:hover{
+   color: #fff;
+}
+/* menubtn styling*/
+.menu-btn{
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
 }
 .navbar .menu li{
     list-style: none;
@@ -66,11 +77,9 @@ body{
 
 
        height: 120vh;
-      
-       color:rgb(0, 0, 0)65, 144, 144);
-       min-height: 500px;
-       font-family: 'Ubuntu', 'sans-serif';
-
+       color: black;
+       min-height : 500px;
+       font-family :'Ubuntu', 'sans-serif';
     }
     .home .max-width{
         margin: auto 0 auto 40px;
@@ -83,11 +92,46 @@ body{
         font-weight: 600;
         margin-left: -3px;
     }
-    .home .home-content .text-3{
+    .home .home-content .text-3
+    {
         font-size: 40px;
-        margin 5px 0;
+        margin: 5px  0;
     }
+
     .home .home-content .text-3 span{
 color: crimson;
 font-weight: 500;
     }
+    @media (max-width:1104px){
+        .home .max-width{
+            margin-left: 0px;
+        }
+    }
+    @media (max-width:947px){
+    }
+    .max-width{
+        padding: 0 50px;
+    }
+    @media (max-width:947px){
+        .navbar .menu{
+            position: fixed;
+            height: 100vh;
+            width: 100%;
+            left: 0;
+            top: 0;
+            background-color:red;
+            text-align: center;
+            padding-top: 80px;
+        }
+        .navbar .menu li{
+            display: block;
+        }
+        .navbar .menu .li a{
+            display: inline-block;
+            margin: 20px 0;
+            font-size: 25px;
+        }
+    }
+    
+    
+
