--- a/ProjectFrontEnd/FatimaAliyeva.css
+++ b/ProjectFrontEnd/FatimaAliyeva.css
@@ -31,8 +31,10 @@ body{
 .navbar .max-width{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between;    
+
 }
+
 .navbar .logo a{
     color: #fff;
     font-size: 35px;
@@ -104,6 +106,22 @@ color: crimson;
 font-weight: 500;
     }
     
+.home .home-content a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size:  25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all;
+    margin-left: 190px;
+}
+.home .home-content a:hover {
 
+color: #fff;
+background: none;
+}
     
 
