--- a/ProjectFrontEnd/FatimaAliyeva.css
+++ b/ProjectFrontEnd/FatimaAliyeva.css
@@ -471,6 +471,18 @@ section .title::after{
 .teams .carousel .card:hover .box{
     transform: scale(1.05);
 }
+.teams .carousel .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+.teams .carousel .card img{
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid crimson;
+    transition: all 0.3s ease;
 @media (max-width: 690px) {
     .max-width{
         padding: 0 23px;
