--- a/ProjectFrontEnd/portfolia.css
+++ b/ProjectFrontEnd/portfolia.css
@@ -159,7 +159,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("Shekil2.jpg") no-repeat center;
+    background: url("Pictures/Shekil2.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -528,5 +528,4 @@ section .title::after{
         width: 35px;
         font-size: 23px;
         line-height: 38px;
-    }
 }
